--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CFManagement": "Server=13.212.106.245;Database=CFManagement;TrustServerCertificate=true;User Id=sa;Password=1234567890Aa"
+    "CFManagement": "Server=13.212.106.245;Database=CFManagement_1;TrustServerCertificate=true;User Id=sa;Password=1234567890Aa"
   },
   "Logging": {
     "LogLevel": {
